--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "spelling-tests",
   "version": "0.1.0",
-  "proxy": "http://localhost:5000",
+  "proxy": "https://spelling-tests-backend.herokuapp.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
