--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "postgres-date": "^1.0.7",
     "react": "^16.13.1",
+    "react-audio-recorder": "^2.2.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
