--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-audio-recorder": "^2.2.0",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-media-recorder": "^1.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.4"
   },
